--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "angular": "^1.6.6",
     "body-parser": "^1.18.2",
     "express": "^4.15.5",
+    "file-system": "^2.2.2",
     "mongodb": "^2.2.31",
     "mongoose": "^4.11.13"
   },
